Bug 201915 - Twitter (kdetwitter) plasmoid leaks pixmaps and never releases them
Summary: Twitter (kdetwitter) plasmoid leaks pixmaps and never releases them
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-microblogging (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-29 19:55 UTC by Steve Gilberd
Modified: 2010-05-21 03:35 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Gilberd 2009-07-29 19:55:40 UTC
Version:            (using KDE 4.2.4)
Compiler:          gcc x86_64-pc-linux-gnu-4.3.3 
OS:                Linux
Installed from:    Compiled From Sources

The twitter plasmoid (kdetwitter) leaks pixmaps and doesn't release the resources back to the system, resulting in ballooning memory usage by X.

This behavior can be seen by running 'plasmoidviewer twitter' and watching the number of pixmaps, and the pixmap memory used by this process in xrestop.

My standard settings are 5 tweets displayed, 2min refresh, show friends. On my system, this results in X eating about 1.2GB/hour of ram.

System Details:
Gentoo ~amd64, x86_64-pc-linux-gnu

USE flags for kde-base/plasma-workspace-4.2.4:
-debug -google-gadgets +handbook -kdeprefix +python -rss +composite +xinerama
Comment 1 Dario Andres 2009-07-29 20:58:46 UTC
Both bug 182900 / bug 201736 mentions leaks that were fixed on KDE4.3 code. Thanks
Comment 2 Aaron J. Seigo 2009-07-29 21:19:04 UTC
yes, these should be addressed in 4.3.
Comment 3 Steve Gilberd 2009-07-29 21:25:57 UTC
Awesome - thanks for the quick response, and glad it's been fixed already :-).
Comment 4 Steve Gilberd 2009-08-05 03:19:14 UTC
Now running KDE-4.3.0 release, compiled from source - the microblogging widget still exhibits the same behavior and has not been fixed.
Comment 5 Aaron J. Seigo 2009-08-05 06:29:08 UTC
how many people are you following on twitter, exactly?
Comment 6 Steve Gilberd 2009-08-05 06:38:36 UTC
Not many - I have around 10 following, and follow twice that.
Comment 7 Daniel 2009-08-15 17:43:01 UTC
Can confirm this here on 4.3.0 release, Gentoo ~amd64 & ~x86.

I am currently following eight people.
Comment 8 Christian Schubert 2009-08-20 18:28:20 UTC
can confirm this on debian sid

plasma-desktop used 130 MiB pixmaps (according to xrestop), after removing the twitter widget, plasma-desktop is down to 26 MB

130 MiB seems to be the cap for me, didn't see any higher value yet
Comment 9 Gerwin 2009-08-31 08:29:39 UTC
Count me in on 4.3 final @ Fedora...
Comment 10 Steve Gilberd 2009-09-11 00:59:19 UTC
Still happens on 4.3.1.
Comment 11 Marco Martin 2010-01-05 16:29:34 UTC
SVN commit 1070409 by mart:

never keep more than 30 avatars in user_map
hope it's enough to stop the X pixmap skyrocketing, not so sure

BUG:201915


 M  +7 -0      microblog.cpp  
 M  +1 -0      microblog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070409
Comment 12 Daniel 2010-02-16 16:21:13 UTC
Still happens with KDE 4.4.0 (Gentoo ~amd64). X Memory usage goes up endlessly. This should be re-opened.
Comment 13 Dario Andres 2010-02-16 16:26:04 UTC
@Daniel: can you confirm that memory usage doesn't happen if you don't use the Microblogging widget at all ?
Regards
Comment 14 Daniel 2010-02-16 16:29:36 UTC
@Dario Andres: When I remove the Microblogging Plasmoid, memory usage drops immediately to a healthy value.
Comment 15 Daniel 2010-02-19 15:00:47 UTC
*bump* re-open?
Comment 16 Steve Gilberd 2010-02-19 22:04:29 UTC
I'm also running Gentoo ~amd64 with KDE-4.4.0, and I can't say I'm seeing this bug any more - memory usage by the microblogging plasmoid is just fine.

Could this perhaps be an entirely different bug with the same symptom?
Comment 17 Aaron J. Seigo 2010-05-21 03:35:20 UTC
SVN commit 1129014 by aseigo:

only hold user pixmap data that is actually in use; prevents endless accumulation of random images over time
BUG:201915


 M  +15 -0     imagesource.cpp  
 M  +3 -0      imagesource.h  
 M  +2 -0      timelinesource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129014