never keep more than 30 avatars in user_map hope it's enough to stop the X pixmap skyrocketing, not so sure

BUG:201915

svn path=/trunk/KDE/kdeplasma-addons/; revision=1070409